# iot-client-sdk

./: .gitattributes  .gitignore  .travis.yml  Dockerfile  Makefile  README.md
include/iot/: client.h
lib/: fix_paho.patch
lib/cajun-2.0.2/: json.h
lib/make_utils/: base.makefile
lib/make_utils/example_project/: Makefile
lib/make_utils/example_project/makefile_in_subdir/: Makefile
lib/make_utils/example_project/src/c_src/: test1.c  test2.c
lib/make_utils/example_project/src/cc_src/: test1.cc  test2.cc
lib/make_utils/example_project/src/cpp_src/: test1.cpp  test2.cpp
lib/make_utils/example_project/tests/main/: main.cpp  utils.cpp
lib/milagro-crypto-c/include/: CMakeLists.txt  amcl.h  arch.h  config.h  mpin.h  rsa.h  sok.h  utils.h  version.h  wcc.h
lib/milagro-crypto-c/src/: CMakeLists.txt  ecp.c  ecp2.c  mpin.c  sok.c  version.c  wcc.c  x509.c
lib/netlib/include/net/: common.h  http_client.h  tcp_connection.h  tls_connection.h  x509.h
lib/netlib/src/: cacert.inc  common.cpp  http_client.cpp  http_response_parser.cpp  http_response_parser.h  tcp_connection.cpp  tls_connection.cpp  utils.cpp  utils.h  x509.cpp
lib/paho.mqtt.embedded-c-master/MQTTClient/src/: FP.h  MQTTClient.h
lib/paho.mqtt.embedded-c-master/MQTTClient/src/linux/: linux.cpp
lib/paho.mqtt.embedded-c-master/MQTTPacket/src/: MQTTFormat.c
project/: client-sdk.sln  client-sdk.vcxproj  client-sdk.vcxproj.filters  iot-client-sdk.sln  iot-client-sdk.vcxproj  iot-client-sdk.vcxproj.filters
src/: client.cpp  crypto.cpp  crypto.h  exception.cpp  exception.h  http.cpp  http.h  mpin_full.cpp  mpin_full.h  mqtt_tls_client.cpp  mqtt_tls_client.h  timer.cpp  timer.h  tls.cpp  tls.h  utils.cpp  utils.h
tests/iot_client/: DEVICE_ID.identity  DEVICE_ID_2.identity  flags.cpp  flags.h  identity.json  identity2.json  iot_client.json  iot_client2.json  main.cpp  start_pub_client.sh  start_send_pm_client.sh  start_sub_client.sh
tests/iot_client/project/: iot_client.vcxproj  iot_client.vcxproj.filters
tools/cross_compile/: cross_compile_info.txt  setup_cross_compile_env.sh
tools/sok_keygen/: Makefile  generate_key.sh  generate_master_secret.sh  main.cpp  master_secret.json
