# AMCL header files

set(COPY_HEADERS
randapi.h
ecdh.h  
rsa.h    
x509.h
version.h
utils.h)

set(AMCL_HEADERS
${CMAKE_CURRENT_BINARY_DIR}/ecdh.h  
${CMAKE_CURRENT_BINARY_DIR}/rsa.h    
${CMAKE_CURRENT_BINARY_DIR}/x509.h
${CMAKE_CURRENT_BINARY_DIR}/version.h
${CMAKE_CURRENT_BINARY_DIR}/utils.h
${CMAKE_CURRENT_BINARY_DIR}/randapi.h
${CMAKE_CURRENT_BINARY_DIR}/arch.h
${CMAKE_CURRENT_BINARY_DIR}/amcl.h) 

if(BUILD_MPIN)
  set(AMCL_HEADERS ${AMCL_HEADERS} ${CMAKE_CURRENT_BINARY_DIR}/mpin.h)
endif(BUILD_MPIN)

if(BUILD_WCC)
  set(COPY_HEADERS ${COPY_HEADERS} wcc.h)
  set(AMCL_HEADERS ${AMCL_HEADERS} ${CMAKE_CURRENT_BINARY_DIR}/wcc.h)
endif(BUILD_WCC)

install (DIRECTORY DESTINATION include DIRECTORY_PERMISSIONS
        OWNER_WRITE OWNER_READ OWNER_EXECUTE
        GROUP_WRITE GROUP_READ
        WORLD_WRITE WORLD_READ WORLD_EXECUTE)

install (FILES ${AMCL_HEADERS} DESTINATION include PERMISSIONS
        OWNER_WRITE OWNER_READ OWNER_EXECUTE
        GROUP_READ GROUP_EXECUTE
        WORLD_READ WORLD_EXECUTE)

# Copy header files to binary include directory
file(COPY ${COPY_HEADERS} DESTINATION ${CMAKE_CURRENT_BINARY_DIR})

# Copy header files for testing before installation
file(COPY ${AMCL_HEADERS} DESTINATION "${PROJECT_BINARY_DIR}/wrappers/go/")
